# exercise-weather-dashboard

./: .gitignore  Dockerfile  LICENSE  README.md  dev.env  docker-compose-test.yml  docker-compose.yml  pyproject.toml
weather_service/: asgi.py  settings.py  urls.py  wsgi.py
weather_service/dashboard/: apps.py  views.py
weather_service/dashboard/models/: models.py
weather_service/dashboard/services/: exceptions.py  weather_data_service.py
weather_service/dashboard/services/api_clients/: openweather_api.py
weather_service/dashboard/services/processors/: analyzer.py  parser.py
weather_service/dashboard/templates/: _base.html  index.html
weather_service/dashboard/tests/: test_view.py
weather_service/dashboard/tests/services/: test_weather_data_service.py
weather_service/dashboard/tests/services/api_clients/data/: current_weather_data.json  location_api.json
weather_service/dashboard/tests/services/processors/: conftest.py  test_analyzer.py  test_parser.py
