[tool.poetry]
name = "exercise-weather-dashboard"
version = "0.1.0"
description = ""
authors = ["Ming-Tung Hong <mingtung.hong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-htmx = "^1.18.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-extensions = "^3.2.3"
requests = "^2.32.3"
pandas = "^2.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
